--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
     height:100%;
     width:100%;
+    scroll-snap-type: y proximity;
     scroll-behavior: smooth;
 }
 :root {
@@ -11,25 +12,103 @@ html {
     --darkish: #BC6C25;
 }
 body{
-    background-color: var(--bg-colour);
-    color: var(--light)
+    color: var(--light);
+    font-family:serif;
+    margin:0;
+
 }
 button{
     border-radius: 8px;
     background-color: var(--light);
     color:var(--dark);
     border: 2px solid var(--darkish);
+    font-family:serif;
+    font-size: clamp(12px, 3vw, 15px);
+    transition: 0.3s;
 
 }
 button:hover{
     cursor:pointer;
     background-color: var(--mid);
+    transform:translateY(-5px);
 }
 
 h1{
-    font-size: 10vw;
+    font-size: clamp(2rem, 10vw, 4rem);
+    margin:30px;
+    
 }
 .on{
-        background-color: var(--mid);
+    background-color: var(--mid);
+}
+#buttons{
+   position:fixed;
+   z-index: 10;
+   top:clamp(30px, 5vw, 60px);
+   margin:30px;
+}
+section{
+    overflow-wrap: break-word;
+    min-height: 100vh;
+    position: relative;
+    margin:0;
+    background-image: linear-gradient(to bottom, var(--bg-colour), var(--dark));
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+
+}
+.scale-info{
+    position: absolute;
+    top:20%;
+    margin-left: 30px;
+    margin-right: 30px;
+
+}
+.scale1{
+    position: absolute;
+    top:20%;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+#next,#next2{
+    width:100px;
+    position:absolute;
+    left: calc(50% - 50px);
+    transition: 0.3s;
+
+}
+#next:hover,#next2:hover{
+    transform:translateY(5px);
+    cursor: pointer;
+}
+
+@media (max-height:700px) and (max-width:500px) {
+    #buttons{
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        width:50%;
+        top:20px;
+        overflow-y: auto;
+        max-height: 50vh;
+    }
+    #buttons > button{
+        display:none;
+    }
+    #buttons:hover > button {
+        display: block;
+    }
+    #buttons > button:first-child{
+        display:block;
+        position: relative;
+    }
+    #buttons > button:first-child::after{
+        content:"▼";
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
 
 }
