--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
     height:100%;
     width:100%;
-    scroll-snap-type: y proximity;
+    scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
 }
 :root {
@@ -34,21 +34,20 @@ button:hover{
 }
 
 h1{
-    font-size: clamp(2rem, 10vw, 4rem);
+    font-size: clamp(32px, 10vw, 64px);
     margin:30px;
-    
 }
 .on{
     background-color: var(--mid);
 }
 #buttons{
-   position:fixed;
-   z-index: 10;
-   top:clamp(30px, 5vw, 60px);
-   margin:30px;
+    position:fixed;
+    z-index: 10;
+    top:clamp(30px, 10vh, 60px);
+    margin-left:20px; 
+    margin-right: 20px;
 }
 section{
-    overflow-wrap: break-word;
     min-height: 100vh;
     position: relative;
     margin:0;
@@ -62,7 +61,6 @@ section{
     top:20%;
     margin-left: 30px;
     margin-right: 30px;
-
 }
 .scale1{
     position: absolute;
@@ -84,7 +82,7 @@ section{
 }
 
 @media (max-height:700px) and (max-width:500px) {
-    #buttons{
+    #button-section{
         display: flex;
         flex-direction: column;
         align-items: stretch;
@@ -92,23 +90,32 @@ section{
         top:20px;
         overflow-y: auto;
         max-height: 50vh;
+        margin:30px;
     }
-    #buttons > button{
+    #button-section > button{
         display:none;
     }
-    #buttons:hover > button {
+    #button-section:hover > button {
         display: block;
     }
-    #buttons > button:first-child{
+    #button-section > button:first-child{
         display:block;
         position: relative;
     }
-    #buttons > button:first-child::after{
+    #button-section > button:first-child::after{
         content:"▼";
         position: absolute;
         right: 10px;
         top: 50%;
         transform: translateY(-50%);
+    }
+    #freq-ind{
+        position: absolute;
+        top:50px;
+        width: auto;
+    }
+    #buttons{
+        width: 100%;
     }
 
 }
