--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html {
 }
 :root {
     --bg-colour: #606C38;
+    --bg2-colour:rgb(76, 94, 17);
     --light: #FEFAE0;
     --dark:#283618;
     --mid:#f0c593;
@@ -15,9 +16,9 @@ body{
     color: var(--light);
     font-family:serif;
     margin:0;
-
+    font-size:17px;
 }
-button{
+.scale-info button,#button-section>button{
     border-radius: 8px;
     background-color: var(--light);
     color:var(--dark);
@@ -25,19 +26,23 @@ button{
     font-family:serif;
     font-size: clamp(12px, 3vw, 15px);
     transition: 0.3s;
+}    
 
-}
-button:hover{
+
+button:hover,#button-section>button:hover {
     cursor:pointer;
     background-color: var(--mid);
     transform:translateY(-5px);
 }
 
 h1{
-    font-size: clamp(32px, 10vw, 64px);
-    margin:30px;
+    font-size: clamp(32px, 20vw, 120px);
+    margin:30px auto 30px auto;
+    text-align: center;
+    vertical-align: middle;
 }
-.on{
+.scale-info button.on, 
+#button-section > button.on, #header button.on{
     background-color: var(--mid);
 }
 #buttons{
@@ -47,11 +52,20 @@ h1{
     margin-left:20px; 
     margin-right: 20px;
 }
+#header button{
+    border-radius: 8px;
+    background-color: var(--light);
+    color:var(--dark);
+    border: 2px solid var(--darkish);
+    font-family:serif;
+    font-size: clamp(20px, 2vw,40px);
+    transition: 0.3s;
+}
 section{
     min-height: 100vh;
     position: relative;
     margin:0;
-    background-image: linear-gradient(to bottom, var(--bg-colour), var(--dark));
+    background-image: linear-gradient(to bottom, var(--bg-colour), var(--bg2-colour));
     scroll-snap-align: start;
     scroll-snap-stop: always;
 
@@ -62,12 +76,7 @@ section{
     margin-left: 30px;
     margin-right: 30px;
 }
-.scale1{
-    position: absolute;
-    top:20%;
-    margin-left: 30px;
-    margin-right: 30px;
-}
+
 
 #next,#next2{
     width:100px;
@@ -81,6 +90,26 @@ section{
     cursor: pointer;
 }
 
+#header{
+    height:100vh;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+    background-color: var(--mid);
+    color:var(--darkish);
+    padding: 1em;
+    text-align: center;
+    display:flex;
+    flex-direction: column;
+    font-size: 40px;
+    justify-content: flex-start;
+
+}
+#header-container{
+    height:fit-content;
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%);
+}
 @media (max-height:700px) and (max-width:500px) {
     #button-section{
         display: flex;
