--- a/style.css
+++ b/style.css
@@ -41,6 +41,9 @@ h1{
     text-align: center;
     vertical-align: middle;
 }
+h3{
+    font-size: 3vh;
+}
 .scale-info button.on, 
 #button-section > button.on, #header button.on{
     background-color: var(--mid);
